--- a/Translation/event.json
+++ b/Translation/event.json
@@ -209,23 +209,23 @@
         "id":""
     },
     "event.BATTLEFIELD.description-2":{
-        "en":"Time (GMT+0): 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
-        "fr":"Horaires(GMT+1): 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
-        "es":"Horarios(GMT+1): 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
-        "zh-cn":"(GMT+8) 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00",
+        "en":"Time (Server): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
+        "fr":"Horaires(Serveur): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
+        "es":"Horarios(Serveur): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
+        "zh-cn":"(Serveur) 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
         "zh-tw":"",
-        "kr":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+9)",
-        "ru":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+3)",
-        "tr":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+3)",
-        "de":"Zeiten: 15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+1)",
-        "jp":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+9)",
-        "pt":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+0)",
+        "kr":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "ru":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "tr":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "de":"Zeiten: 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "jp":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "pt":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
         "vi":"Thời Gian: 20:00-20:30 21:30-22:00<br>1:30-2:00 2:30-3:00 (GMT+7 Việt Nam)",
-        "ar":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-6)",
-        "it":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-1)",
-        "pl":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+1)",
-        "th":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT+7)",
-        "id":"15:00-15:30 16:30-17:00<br>20:30-21:00 21:30-22:00 (GMT-7)"
+        "ar":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "it":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "pl":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "th":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
+        "id":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)"
     },
     "event.BATTLEFIELD.score.team-ally":{
         "en":"Ally",
