--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -9347,5 +9347,24 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.character-selection.create-character":{
+        "en":"Create a character",
+        "fr":"Créer un personnage",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
