--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3641,7 +3641,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hạng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3698,7 +3698,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thành Viên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3717,7 +3717,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thành Lũy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3736,7 +3736,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đại Chiến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3755,7 +3755,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoạt Động",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3793,7 +3793,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tầng Lớp",
+        "vi":"Chức Phận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6719,7 +6719,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"{0}: Cần {1} chúc phúc của Bur để lên cấp tiếp theo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6776,7 +6776,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chuyển Khoản",
+        "vi":"Chuyển Sao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9455,7 +9455,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tạo nhân vật",
         "ar":"",
         "it":"",
         "pl":"",
