--- a/Translation/event.json
+++ b/Translation/event.json
@@ -220,7 +220,7 @@
         "de":"Zeiten: 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
         "jp":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
         "pt":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
-        "vi":"Thời Gian: 20:00-20:30 21:30-22:00<br>1:30-2:00 2:30-3:00 (GMT+7 Việt Nam)",
+        "vi":"Thời Gian (VN): 5:30-6:00 9:30-10:00<br>13:30-14:00 17:30-18:00<br>21:30-22:00 1:30-2:00",
         "ar":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
         "it":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
         "pl":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
