--- a/Translation/general.json
+++ b/Translation/general.json
@@ -296,7 +296,7 @@
         "de":"Klasse",
         "jp":"",
         "pt":"",
-        "vi":"Lớp Nghề",
+        "vi":"Danh Phận",
         "ar":"",
         "it":"",
         "pl":"",
