--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -30,7 +30,7 @@
         "de":"Erforderliche Klasse",
         "jp":"",
         "pt":"",
-        "vi":"Yêu Cầu Lớp Nghề",
+        "vi":"Yêu Cầu Danh Phận",
         "ar":"",
         "it":"",
         "pl":"",
