--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7148,6 +7148,44 @@
         "th":"",
         "id":""
     },
+    "item.3804.name":{
+        "en":"[Spirit Egg] Lord of Byron",
+        "fr":"[Oeuf d'esprit] Seigneur de Byron",
+        "es":"",
+        "zh-cn":"[精灵蛋] 拜伦之主",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Chủ Thành Byron",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.3805.name":{
+        "en":"[Spirit Egg] Bahamut's Tentacle",
+        "fr":"[Oeuf d'esprit] Tentacule de Bahamut",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"Slime Pudding",
@@ -9574,6 +9612,44 @@
         "jp":"",
         "pt":"",
         "vi":"Chúa Tể Pháp Thuật",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4804.name":{
+        "en": "Lord of Byron",
+        "fr": "Seigneur de Byron",
+        "es": "Senor de Byron",
+        "zh-cn": "拜伦之主",
+        "zh-tw": "",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Herr von Byron",
+        "jp": "",
+        "pt": "",
+        "vi": "Chủ Thành Byron",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "item.4805.name":{
+        "en":"Bahamut's Tentacle",
+        "fr":"Tentacule de Bahamut",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
