--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7179,7 +7179,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Xúc Tu Của Bahamut",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9649,7 +9649,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xúc Tu Của Bahamut",
         "ar":"",
         "it":"",
         "pl":"",
