--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -3317,7 +3317,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Khi dùng Hỏa Cầu, Đạn Ma Pháp, Lôi Điện hoặc Tàn Phá sẽ có {0}% khả năng tái vận phép lần hai. Cannot occur more that once every 6 seconds.",
+        "vi": "Khi dùng Hỏa Cầu, Đạn Ma Pháp, Lôi Điện hoặc Tàn Phá sẽ có {0}% khả năng tái vận phép lần hai. Không thể xảy ra liên tiếp trong vòng 6 giây.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -5350,7 +5350,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Mỗi 3000 Máu có được tăng {0} Công Kích Thần Thánh. Each 500 Holy Attack, the HP required is multiplied by 10.",
+        "vi": "Với mỗi 3000 Máu có được tăng {0} Công Kích Thần Thánh. Với mỗi 500 Công Kích Thần Thánh nhận được, lượng Máu yêu cầu sẽ tăng gấp 10.",
         "ar": "",
         "it": "",
         "pl": "",
