--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3318,7 +3318,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Mỗi điểm tốn {0} điểm Hắc Ma Pháp",
+        "vi":"Mỗi điểm tốn {0} điểm Ma Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8144,7 +8144,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cấp 10: +1000 HP, Sát Thương Nguyên Tố tăng thêm 300 điểm, Trị Liệu Nguyên Tố +100",
+        "vi":"Cấp 10: +1000 Máu, Sát Thương Nguyên Tố tăng thêm 300 điểm, Trị Liệu Nguyên Tố +100",
         "ar":"",
         "it":"",
         "pl":"",
