--- a/Translation/item.json
+++ b/Translation/item.json
@@ -27855,7 +27855,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Thuốc Hồi Máu x 10<br>  - Thuốc Năng Lượng Nhiều x 10<br> - Pha Lê Dịch Chuyển Nhỏ<br> - Hắc Ma Pháp x 2000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Thuốc Hồi Máu x 10<br>  - Thuốc Năng Lượng Nhiều x 10<br> - Pha Lê Dịch Chuyển Nhỏ<br> - Ma Năng x 2000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -27931,7 +27931,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Thuốc Hồi Máu Nhiều x 10<br> - Thuốc Năng Lượng Nhiều x 10<br> - Pha Lê Dịch Chuyển Nhỏ<br> - Hắc Ma Pháp x 4000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Thuốc Hồi Máu Nhiều x 10<br> - Thuốc Năng Lượng Nhiều x 10<br> - Pha Lê Dịch Chuyển Nhỏ<br> - Ma Năng x 4000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28009,7 +28009,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận: <br> - Thuốc Hồi Máu Cao Cấp x 10<br> - Thuốc Năng Lượng Nhiều x 10<br> - Pha Lê Dịch Chuyển Nhỏ<br> - Hắc Ma Pháp x 8000",
+        "vi":"Nhấn chuột phải để nhận: <br> - Thuốc Hồi Máu Cao Cấp x 10<br> - Thuốc Năng Lượng Nhiều x 10<br> - Pha Lê Dịch Chuyển Nhỏ<br> - Ma Năng x 8000",
         "ar":"",
         "it":"",
         "pl":"",
