--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1626,7 +1626,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Maelstrom",
+        "vi":"Thủy Lưu",
         "ar":"",
         "it":"",
         "pl":"",
